# OOP-CPP-Laboratory_2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: Four.h
src/: Four.cpp
test/: test_four.cpp
